# tclaude

./: .editorconfig  .envrc  .gitignore  README.md  chat.py  common.py  flake.nix  install.py  print.py  prompt.py  pyproject.toml  requirements.txt  setup.py  tai.py  tools.py
.github/workflows/: build.yml  ci.yml  pypi.yml
scripts/: patch_ci_version.py
src/tai/: __init__.py  chat.py  common.py  config.py  endpoints.py  files.py  json.py  live_print.py  logging.py  print.py  prompt.py  session.py  spinner.py  tai.py  terminal_prompt.py  token_counter.py  tool_use.py  tools.py
src/tclaude/: __init__.py  chat.py  commands.py  common.py  config.py  endpoints.py  files.py  json.py  logging.py  logging_config.py  mcp.py  oauth.py  print.py  prompt.py  session.py  tclaude.py  terminal_prompt.py  token_counter.py  tool_use.py
src/tclaude/default-config/: tclaude.toml
