[tool.black]
line-length = 140

[project]
name = "tai"
version = "0.1.0"
description = "A complete terminal implementation of Anthropic's Claude."
authors = [{name = "Thomas Müller", email = "tom@94.me"}]
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "html2text",
    "partial-json-parser",
    "prompt_toolkit",
    "wcwidth",
]

[project.scripts]
tai = "tai.tai:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai*"]

